--- a/Public/index.html
+++ b/Public/index.html
@@ -380,6 +380,23 @@ const catalog = {
 			  "": "https://chemistry-g10ep.github.io/IIT-JEE-E-Q--HTML-Thermodynamic/.html",
 			 "24. Bond Energy, Bond Enthalpies, Applications, and Resonance Energy": "https://chemistry-g10ep.github.io/IIT-JEE-E-Q--HTML-Thermodynamic/24. Bond Energy, Bond Enthalpies, Applications, and Resonance Energy.html"		  
 		  },
+	   "Chapter 5 - Electrochemistry": {
+              "1. Electrolytes & Electrolysis": "https://chemistry-g10ep.github.io/IIT-JEE-E--HTML--Electrochemistry/1. Electrolytes & Electrolysis.html",
+			 "2. Faraday’s laws of electrolysis": "https://chemistry-g10ep.github.io/IIT-JEE-E--HTML--Electrochemistry/2. Faraday’s laws of electrolysis.html",
+			 "3. Metallic and Electrolytic Conductors": "https://chemistry-g10ep.github.io/IIT-JEE-E--HTML--Electrochemistry/3. Metallic and Electrolytic Conductors.html",
+			 "4. Electrolytic Conduction (Ohm’s law, Resistance, Resistivity, Conductance, Conductivity)": "https://chemistry-g10ep.github.io/IIT-JEE-E--HTML--Electrochemistry/4. Electrolytic Conduction (Ohm’s law, Resistance, Resistivity, Conductance, Conductivity).html",
+			 "5. molar conductance-equivalent conductance-experimental measurement-conductivity calculations": "https://chemistry-g10ep.github.io/IIT-JEE-E--HTML--Electrochemistry/5. molar conductance-equivalent conductance-experimental measurement-conductivity calculations.html",
+			 "6. Factors affecting electrolytic conductance": "https://chemistry-g10ep.github.io/IIT-JEE-E--HTML--Electrochemistry/6. Factors affecting electrolytic conductance.html",
+			 "7. Migration of ions and Transport numbers": "https://chemistry-g10ep.github.io/IIT-JEE-E--HTML--Electrochemistry/7. Migration of ions and Transport numbers.html",
+			 "8. Kohlrausch’s law and its applications": "https://chemistry-g10ep.github.io/IIT-JEE-E--HTML--Electrochemistry/8. Kohlrausch’s law and its applications.html",
+			 "9. Electrochemical- Galvanic cells": "https://chemistry-g10ep.github.io/IIT-JEE-E--HTML--Electrochemistry/9. Electrochemical- Galvanic cells.html",
+			 "10. Commercial Cells-Batteries": "https://chemistry-g10ep.github.io/IIT-JEE-E--HTML--Electrochemistry/10. Commercial Cells-Batteries.html",
+			 "11.Electrode Potentials": "https://chemistry-g10ep.github.io/IIT-JEE-E--HTML--Electrochemistry/11.Electrode Potentials.html",
+			 "12. Cell Potential-EMF of the Cell and Nernst Equation": "https://chemistry-g10ep.github.io/IIT-JEE-E--HTML--Electrochemistry/12. Cell Potential-EMF of the Cell and Nernst Equation.html",
+			 "13. Relationship between Potential, Gibbs Free Energy, and Equilibrium Constant": "https://chemistry-g10ep.github.io/IIT-JEE-E--HTML--Electrochemistry/13. Relationship between Potential, Gibbs Free Energy, and Equilibrium Constant.html",
+			 "14. Electrochemical Series": "https://chemistry-g10ep.github.io/IIT-JEE-E--HTML--Electrochemistry/14. Electrochemical Series.html",
+			 "15. Corrosion": "https://chemistry-g10ep.github.io/IIT-JEE-E--HTML--Electrochemistry/15. Corrosion.html"	
+            },
 		   "Chapter 7 - Coming Soon": {
               "Coming Soon": "https://gten-educational-platform.github.io/Class-11-Physics/motion-1d/basic/uniform-acceleration.html",
 			 "Coming Soon": "https://gten-educational-platform.github.io/Class-11-Physics/motion-1d/basic/uniform-acceleration.html",
