--- a/Public/index.html
+++ b/Public/index.html
@@ -470,6 +470,24 @@
 			 "3. Chemical kinetics (Collision theory, Energy of activation and Arrhenius equation)": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-CHEMICAL-KINETICS/3. Chemical kinetics (Collision theory, Energy of activation and Arrhenius equation).html",
 			 "4. Chemical kinetics (Photochemical reactions)": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-CHEMICAL-KINETICS/4. Chemical kinetics (Photochemical reactions).html"	
             },
+	 "Chapter 5 - Electrochemistry": {
+              "1. Electrolytes and Electrolysis-1": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-Electrochemistry/1. Electrolytes and Electrolysis-1.html",
+			 "1. Electrolytes and Electrolysis-2": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-Electrochemistry/1. Electrolytes and Electrolysis-2.html",
+			 "2. Faraday's law of electrolysis-1": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-Electrochemistry/2. Faraday's law of electrolysis-1.html",
+			 "2. Faraday's law of electrolysis-2": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-Electrochemistry/2. Faraday's law of electrolysis-2.html",
+			 "2. Faraday's law of electrolysis-3": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-Electrochemistry/2. Faraday's law of electrolysis-3.html",
+			 "2. Faraday's law of electrolysis-4": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-Electrochemistry/2. Faraday's law of electrolysis-4.html",
+			 "3. Conductor and conductance": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-Electrochemistry/3. Conductor and conductance.html",
+			 "4. Cell constant and Electrochemical Cells-1": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-Electrochemistry/4. Cell constant and Electrochemical Cells-1.html",
+			 "4. Cell constant and Electrochemical Cells-2": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-Electrochemistry/4. Cell constant and Electrochemical Cells-2.html",
+			 "4. Cell constant and Electrochemical Cells-3": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-Electrochemistry/4. Cell constant and Electrochemical Cells-3.html",
+			 "5. Electrode potential, ECell, Nernt equation and ECS-1": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-Electrochemistry/5. Electrode potential, ECell, Nernt equation and ECS-1.html",
+			 "5. Electrode potential, ECell, Nernt equation and ECS-2": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-Electrochemistry/5. Electrode potential, ECell, Nernt equation and ECS-2.html",
+			 "5. Electrode potential, ECell, Nernt equation and ECS-3": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-Electrochemistry/5. Electrode potential, ECell, Nernt equation and ECS-3.html",
+			 "5. Electrode potential, ECell, Nernt equation and ECS-4": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-Electrochemistry/5. Electrode potential, ECell, Nernt equation and ECS-4.html",
+			 "5. Electrode potential, ECell, Nernt equation and ECS-5": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-Electrochemistry/5. Electrode potential, ECell, Nernt equation and ECS-5.html",
+			 "6. Corrosion": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-Electrochemistry/6. Corrosion.html"	
+            },
 			            "Chapter 5 - Coming Soon": {
               "Coming Soon": "https://gten-educational-platform.github.io/Class-11-Physics/motion-1d/basic/uniform-acceleration.html",
 			 "Coming Soon": "https://gten-educational-platform.github.io/Class-11-Physics/motion-1d/basic/uniform-acceleration.html",
