--- a/Public/index.html
+++ b/Public/index.html
@@ -526,10 +526,31 @@
               "All Question, Answerkey and Solution Include ": "https://gten-educational-platform.github.io/Class-12/chemistry dpp solution.html"
             }
           },
- "PYQ mains Coming Soon": {
-            "Chapter 1 - Coming Soon": {
-              "Coming Soon": "https://gten-educational-platform.gthub.io/Class-12/new 7.html"
-            }
+"PYQ mains ": {
+            "Some Basic Concept Of Chemistry": {
+              "PYQ-2024": "https://chemistry-g10ep.github.io/PYQ-Some-B-C-of-chemistry/SOME BASIC CONCEPT OF CHEMISTRY PYQ Quiz 2024.html"
+             },
+			"Structure of Atoms": {
+              "PYQ-2024": "https://chemistry-g10ep.github.io/PYQ-Struc-Of-Atoms/STRUCTURE OF ATOM PYQ Quiz 2024.html",
+			  "Coming Soon": "https://gten-educational-platform.github.io/Class-11-Physics/motion-1d/basic/uniform-acceleration.html",
+				 },
+			"Thermodynamic": {
+              "PYQ-2024": "https://chemistry-g10ep.github.io/PYQ-Thermodynamic/CHEMICAL THERMODYANAMIC pyq 2024.html",
+			  "Coming Soon": "https://gten-educational-plaform.github.io/Class-11-Physics/motion-1d/basic/uniform-acceleration.html",
+			 },
+			"Equlibrium": {
+              "PYQ-2024": "https://chemistry-g10ep.github.io/PYQ-Equilibrium/EQULIVRIUM PYQ 2024.html",
+			  "Coming Soon": "https://gten-educational-platform.github.io/Class-11-Physics/motion-1d/basic/uniform-acceleration.html",
+			 },
+			"Solution": {
+              "PYQ-2024": "https://chemistry-g10ep.github.io/PYQ-Solution/SOLUTION PYQ 2024.html",
+			  "Coming Soon": "https://gten-educational-platform.github.io/Class-11-Physics/motion-1d/basic/uniform-acceleration.html",
+			 },
+			"Electrochemistry": {
+              "PYQ-2024": "https://chemistry-g10ep.github.io/PYQ-Elec-Chemistry/ELECTROCHEMISTRY PYQ 2024.html",
+			  "Coming Soon": "https://gten-educational-platform.github.io/Class-11-Physics/motion-1d/basic/uniform-acceleration.html",
+						
+			 }
           },
 
 "PYQ advance Coming Soon": {
