--- a/Public/index.html
+++ b/Public/index.html
@@ -457,6 +457,28 @@
 			  "6. Valency and oxidation state-2": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-CCHEMICAL-PREIODICITY/6. Valency and oxidation state-2.html"
 			  
 				},
+	 "Chapter 4 - Solution": {
+              "1. Solubility and Kinds of Solutions": "https://chemistry-g10ep.github.io/IIT-JEE-E--HTML-Solution/1. Solubility and Kinds of Solutions.html",
+			 "2. Methods of Expressing Concentration of Solution(Percentage, wbyw %, wbyv %, vbyv %, vbyw %": "https://chemistry-g10ep.github.io/IIT-JEE-E--HTML-Solution/2. Methods of Expressing Concentration of Solution(Percentage, wbyw %, wbyv %, vbyv %, vbyw %.html",
+			 "3. ppm, ppb, and strength": "https://chemistry-g10ep.github.io/IIT-JEE-E--HTML-Solution/3. ppm, ppb, and strength.html",
+			 "4. Normality (N)": "https://chemistry-g10ep.github.io/IIT-JEE-E--HTML-Solution/4. Normality (N).html",
+			 "5. Molarity (M)": "https://chemistry-g10ep.github.io/IIT-JEE-E--HTML-Solution/5. Molarity (M).html",
+			 "6. Relation between Molarity and Normality": "https://chemistry-g10ep.github.io/IIT-JEE-E--HTML-Solution/6. Relation between Molarity and Normality.html",
+			 "7. Molality (m)": "https://chemistry-g10ep.github.io/IIT-JEE-E--HTML-Solution/7. Molality (m).html",
+			 "8. Relation between Molarity (M) and Molality (m)": "https://chemistry-g10ep.github.io/IIT-JEE-E--HTML-Solution/8. Relation between Molarity (M) and Molality (m).html",
+			 "9. Formality (F)": "https://chemistry-g10ep.github.io/IIT-JEE-E--HTML-Solution/9. Formality (F).html",
+			 "10. Mole Fraction (X)": "https://chemistry-g10ep.github.io/IIT-JEE-E--HTML-Solution/10. Mole Fraction (X).html",
+			 "11. Relation between molality (m) and mole fraction of the solute (Xₐ), Mass Fraction and Demal Unit (D)": "https://chemistry-g10ep.github.io/IIT-JEE-E--HTML-Solution/11. Relation between molality (m) and mole fraction of the solute (Xₐ), Mass Fraction and Demal Unit (D).html",
+			 "12. Colligative Property- Lowering of Vapour Pressure": "https://chemistry-g10ep.github.io/IIT-JEE-E--HTML-Solution/12. Colligative Property- Lowering of Vapour Pressure.html",
+			 "13. Ideal and Non-Ideal Solutions, including positive and negative deviations from Raoult’s law": "https://chemistry-g10ep.github.io/IIT-JEE-E--HTML-Solution/13. Ideal and Non-Ideal Solutions, including positive and negative deviations from Raoult’s law.html",
+			 "14. Azeotropic mixtures": "https://chemistry-g10ep.github.io/IIT-JEE-E--HTML-Solution/14. Azeotropic mixtures.html",
+			 "15. Osmosis and Osmotic Pressure": "https://chemistry-g10ep.github.io/IIT-JEE-E--HTML-Solution/15. Osmosis and Osmotic Pressure.html",
+			 "16. Elevation in Boiling Point (Ebullioscopy)": "https://chemistry-g10ep.github.io/IIT-JEE-E--HTML-Solution/16. Elevation in Boiling Point (Ebullioscopy).html",
+			 "17. Depression in Freezing Point (Cryoscopy)": "https://chemistry-g10ep.github.io/IIT-JEE-E--HTML-Solution/17. Depression in Freezing Point (Cryoscopy).html",
+			 "18. Colligative properties of electrolytes": "https://chemistry-g10ep.github.io/IIT-JEE-E--HTML-Solution/18. Colligative properties of electrolytes.html",
+			 "19. Abnormal Molecular Masses": "https://chemistry-g10ep.github.io/IIT-JEE-E--HTML-Solution/19. Abnormal Molecular Masses.html",
+			 "20. Van’t Hoff’s Factor ( i )": "https://chemistry-g10ep.github.io/IIT-JEE-E--HTML-Solution/20. Van’t Hoff’s Factor ( i ).html"	
+            },
             "Chapter 4 - Chemical Kinetics": {
               "1. Chemical kinetics (Rate of a reaction)-1": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-CHEMICAL-KINETICS/1. Chemical kinetics (Rate of a reaction)-1.html",
 			 "1. Chemical kinetics (Rate of a reaction)-2": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-CHEMICAL-KINETICS/1. Chemical kinetics (Rate of a reaction)-2.html",
