--- a/Public/index.html
+++ b/Public/index.html
@@ -394,6 +394,40 @@
 			 "14. Electrochemical Series": "https://chemistry-g10ep.github.io/IIT-JEE-E--HTML--Electrochemistry/14. Electrochemical Series.html",
 			 "15. Corrosion": "https://chemistry-g10ep.github.io/IIT-JEE-E--HTML--Electrochemistry/15. Corrosion.html"	
             },
+	   "Chapter 4 - The d-and f Block Eleents": {
+              "1. The d- and f-Block Elements - Introduction": "https://chemistry-g10ep.github.io/Board-E--d-f-block-Elements/1. The d- and f-Block Elements - Introduction.html",
+			  "2. Position in the Periodic Table and Electronic Configuration": "https://chemistry-g10ep.github.io/Board-E--d-f-block-Elements/2. Position in the Periodic Table and Electronic Configuration.html",
+			   "3. variation in atomic and ionic size, lanthanoid contraction, and actinoid contraction": "https://chemistry-g10ep.github.io/Board-E--d-f-block-Elements/3. variation in atomic and ionic size, lanthanoid contraction, and actinoid contraction.html",
+			    "4. Ionisation Enthalpy and Oxidation States of d-Block Elements": "https://chemistry-g10ep.github.io/Board-E--d-f-block-Elements/4. Ionisation Enthalpy and Oxidation States of d-Block Elements.html",
+				 "5. Trends in 𝑀3+-𝑀2,and 𝑀2+-𝑀M2-+M Standard Electrode Potentials": "https://chemistry-g10ep.github.io/Board-E--d-f-block-Elements/5. Trends in 𝑀3+𝑀2+M3+M2+ and 𝑀2+𝑀M2+M Standard Electrode Potentials.html",
+				  "6. Trends in stability of higher oxidation states, chemical reactivity, and standard electrode (E°) values": "https://chemistry-g10ep.github.io/Board-E--d-f-block-Elements/6. Trends in stability of higher oxidation states, chemical reactivity, and standard electrode (E°) values.html",
+				   "7. Magnetic properties and formation of coloured ions": "https://chemistry-g10ep.github.io/Board-E--d-f-block-Elements/7. Magnetic properties and formation of coloured ions.html",
+				    "8. Formation of Complex Compounds": "https://chemistry-g10ep.github.io/Board-E--d-f-block-Elements/8. Formation of Complex Compounds.html",
+					 "9. Catalytic Properties, Formation of interstitial compounds and alloy formation": "https://chemistry-g10ep.github.io/Board-E--d-f-block-Elements/9. Catalytic Properties, Formation of interstitial compounds and alloy formation.html",
+					  "10. Oxides and Oxoanions of metals": "https://chemistry-g10ep.github.io/Board-E--d-f-block-Elements/10. Oxides and Oxoanions of metals.html",
+					   "11. potassium dichromate (𝐾2𝐶𝑟2𝑂7)": "https://chemistry-g10ep.github.io/Board-E--d-f-block-Elements/11. potassium dichromate (𝐾2𝐶𝑟2𝑂7).html",
+					    "12. Potassium chromate": "https://chemistry-g10ep.github.io/Board-E--d-f-block-Elements/12. Potassium chromate.html",
+						"13. Reactions and Uses of Dichromates, Chromates, and Permanganates": "https://chemistry-g10ep.github.io/Board-E--d-f-block-Elements/13. Reactions and Uses of Dichromates, Chromates, and Permanganates.html",
+						"14. Lanthanoids-electronic configuration, atomic-ionic size, and oxidation state": "https://chemistry-g10ep.github.io/Board-E--d-f-block-Elements/14. Lanthanoids-electronic configuration, atomic-ionic size, and oxidation state.html",
+						 "15. Chemical Properties of Lanthanoids": "https://chemistry-g10ep.github.io/Board-E--d-f-block-Elements/15. Chemical Properties of Lanthanoids.html",
+						 "16. Actinoids -electronic configuration, oxidation states, and chemical properties": "https://chemistry-g10ep.github.io/Board-E--d-f-block-Elements/16. Actinoids -electronic configuration, oxidation states, and chemical properties.html",
+						  "17. Applications of d- and f-block elements": "https://chemistry-g10ep.github.io/Board-E--d-f-block-Elements/17. Applications of d- and f-block elements.html"
+						  	},
+		  		   "Chapter 5 - COORDINATION COMPOUNDS": {
+              "1. introductory part of Coordination Chemistry": "https://chemistry-g10ep.github.io/IIT-JEE-E-Q--HTML-Cor-COMPOUND/1. introductory part of Coordination Chemistry.html",
+			 "2. Terminology of Coordination Compounds-Central metal atom and ion, Complex ion, Ligands": "https://chemistry-g10ep.github.io/IIT-JEE-E-Q--HTML-Cor-COMPOUND/2. Terminology of Coordination Compounds-Central metal atom and ion, Complex ion, Ligands.html",
+			 "3. Coordination Sphere, Coordination Number, and Ionisation Sphere": "https://chemistry-g10ep.github.io/IIT-JEE-E-Q--HTML-Cor-COMPOUND/3. Coordination Sphere, Coordination Number, and Ionisation Sphere.html",
+			 "4. Oxidation Number and Charge on Complexes": "https://chemistry-g10ep.github.io/IIT-JEE-E-Q--HTML-Cor-COMPOUND/4. Oxidation Number and Charge on Complexes.html",
+			 "5. IUPAC Nomenclature of Coordination Compounds": "https://chemistry-g10ep.github.io/IIT-JEE-E-Q--HTML-Cor-COMPOUND/5. IUPAC Nomenclature of Coordination Compounds.html",
+			 "6. Structural isomerism": "https://chemistry-g10ep.github.io/IIT-JEE-E-Q--HTML-Cor-COMPOUND/6. Structural isomerism.html",
+			 "7. Stereoisomerism": "https://chemistry-g10ep.github.io/IIT-JEE-E-Q--HTML-Cor-COMPOUND/7. Stereoisomerism.html",
+			 "8. Bonding in Coordination Compounds – Werners Theory": "https://chemistry-g10ep.github.io/IIT-JEE-E-Q--HTML-Cor-COMPOUND/8. Bonding in Coordination Compounds – Werners Theory.html",
+			 "9. Valence Bond Theory (VBT) of Coordination Compounds": "https://chemistry-g10ep.github.io/IIT-JEE-E-Q--HTML-Cor-COMPOUND/9. Valence Bond Theory (VBT) of Coordination Compounds.html",
+			 "10. Ligand Field Theory (LFT)": "https://chemistry-g10ep.github.io/IIT-JEE-E-Q--HTML-Cor-COMPOUND/10. Ligand Field Theory (LFT).html",
+			 "11. Factors Affecting Stability of Complexes and metal carbonyl bonding": "https://chemistry-g10ep.github.io/IIT-JEE-E-Q--HTML-Cor-COMPOUND/11. Factors Affecting Stability of Complexes and metal carbonyl bonding.html",
+			 "12. Preparation and Applications of Coordination Compounds": "https://chemistry-g10ep.github.io/IIT-JEE-E-Q--HTML-Cor-COMPOUND/12. Preparation and Applications of Coordination Compounds.html",
+			 "13. Organometallic Compounds": "https://chemistry-g10ep.github.io/IIT-JEE-E-Q--HTML-Cor-COMPOUND/13. Organometallic Compounds.html"		  
+		  },
 		   "Chapter 7 - Coming Soon": {
               "Coming Soon": "https://gten-educational-platform.github.io/Class-11-Physics/motion-1d/basic/uniform-acceleration.html",
 			 "Coming Soon": "https://gten-educational-platform.github.io/Class-11-Physics/motion-1d/basic/uniform-acceleration.html",
