--- a/Public/index.html
+++ b/Public/index.html
@@ -561,6 +561,42 @@ setInterval(async()=>{
 			  "6. Valency and oxidation state-2": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-CCHEMICAL-PREIODICITY/6. Valency and oxidation state-2.html"
 			  
 				},
+	 	"Chapter 4 - CHEMICAL BONDING": {
+              "1. Electrovalent bonding-1": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-CHEMICAL-BONDING/1. Electrovalent bonding-1.html",
+			 "1. Electrovalent bonding-2": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-CHEMICAL-BONDING/1. Electrovalent bonding-2.html",
+			 "1. Electrovalent bonding-3": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-CHEMICAL-BONDING/1. Electrovalent bonding-3.html",
+			 "1. Electrovalent bonding-4": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-CHEMICAL-BONDING/1. Electrovalent bonding-4.html",
+			 "2. Covalent bonding-1": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-CHEMICAL-BONDING/2. Covalent bonding-1.html",
+			 "2. Covalent bonding-2": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-CHEMICAL-BONDING/2. Covalent bonding-2.html",
+			 "2. Covalent bonding-3": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-CHEMICAL-BONDING/2. Covalent bonding-3.html",
+			 "2. Covalent bonding-4": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-CHEMICAL-BONDING/2. Covalent bonding-4.html",
+			 "3. Co-ordinate or Dative bonding": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-CHEMICAL-BONDING/3. Co-ordinate or Dative bonding.html",
+			 "4. Dipole moment-1": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-CHEMICAL-BONDING/4. Dipole moment-1.html",
+			 "4. Dipole moment-1": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-CHEMICAL-BONDING/4. Dipole moment-2.html",
+			 "5. Polarisation and Fajan's rule": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-CHEMICAL-BONDING/5. Polarisation and Fajan's rule.html",
+			 "6. Overlaping-pi and sigma bonds": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-CHEMICAL-BONDING/6. Overlaping-pi and sigma bonds.html",
+			 "7. Hybridisation-1": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-CHEMICAL-BONDING/7. Hybridisation-1.html",
+			 "7. Hybridisation-2": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-CHEMICAL-BONDING/7. Hybridisation-2.html",
+			 "7. Hybridisation-3": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-CHEMICAL-BONDING/7. Hybridisation-3.html",
+			 "7. Hybridisation-4": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-CHEMICAL-BONDING/7. Hybridisation-4.html",
+			 "7. Hybridisation-5": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-CHEMICAL-BONDING/7. Hybridisation-5.html",
+			 "7. Hybridisation-6": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-CHEMICAL-BONDING/7. Hybridisation-6.html",
+			 "7. Hybridisation-7": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-CHEMICAL-BONDING/7. Hybridisation-7.html",
+			 "7. Hybridisation-8": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-CHEMICAL-BONDING/7. Hybridisation-8.html",
+			 "8. Resonance": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-CHEMICAL-BONDING/8. Resonance.html",
+			 "9. VSEPR Theory-1": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-CHEMICAL-BONDING/9. VSEPR Theory-1.html",
+			 "9. VSEPR Theory-2": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-CHEMICAL-BONDING/9. VSEPR Theory-2.html",
+			 "10. Molecular orbital theory-1": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-CHEMICAL-BONDING/10. Molecular orbital theory-1.html",
+			 "10. Molecular orbital theory-2": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-CHEMICAL-BONDING/10. Molecular orbital theory-2.html",
+			 "10. Molecular orbital theory-3": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-CHEMICAL-BONDING/10. Molecular orbital theory-3.html",
+			 "10. Molecular orbital theory-4": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-CHEMICAL-BONDING/10. Molecular orbital theory-4.html",
+			 "11. Hydrogen bonding-1": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-CHEMICAL-BONDING/11. Hydrogen bonding-1.html",
+			 "11. Hydrogen bonding-1": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-CHEMICAL-BONDING/11. Hydrogen bonding-2.html",
+			 "11. Hydrogen bonding-3": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-CHEMICAL-BONDING/11. Hydrogen bonding-3.html",
+			 "": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-CHEMICAL-BONDING/.html",
+			 "": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-CHEMICAL-BONDING/.html",
+			 "12. Types of bonding and Forces in solid": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-CHEMICAL-BONDING/12. Types of bonding and Forces in solid.html"	
+            },
 	 "Chapter 4 - Solution": {
               "1. Solubility and Kinds of Solutions": "https://chemistry-g10ep.github.io/IIT-JEE-E--HTML-Solution/1. Solubility and Kinds of Solutions.html",
 			 "2. Methods of Expressing Concentration of Solution(Percentage, wbyw %, wbyv %, vbyv %, vbyw %": "https://chemistry-g10ep.github.io/IIT-JEE-E--HTML-Solution/2. Methods of Expressing Concentration of Solution(Percentage, wbyw %, wbyv %, vbyv %, vbyw %.html",
