--- a/Public/index.html
+++ b/Public/index.html
@@ -597,7 +597,24 @@ setInterval(async()=>{
 			 "": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-CHEMICAL-BONDING/.html",
 			 "12. Types of bonding and Forces in solid": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-CHEMICAL-BONDING/12. Types of bonding and Forces in solid.html"	
             },
-	 "Chapter 4 - Solution": {
+"Chapter 5 - Thermodynamic": {
+              "1. Basic Concept Of Thermodynamic": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-Thermodynamic/1. Basic Concept Of Thermodynamic.html",
+			 "2. First law of thermodynamics and Hess law-1": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-Thermodynamic/2. First law of thermodynamics and Hess law-1.html",
+			 "2. First law of thermodynamics and Hess law-2": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-Thermodynamic/2. First law of thermodynamics and Hess law-2.html",
+			 "3. IInd & IIIrd Law of thermodynamics and Entropy-1": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-Thermodynamic/3. IInd & IIIrd Law of thermodynamics and Entropy-1.html",
+			 "3. IInd & IIIrd Law of thermodynamics and Entropy-2": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-Thermodynamic/3. IInd & IIIrd Law of thermodynamics and Entropy-2.html",
+			 "3. IInd & IIIrd Law of thermodynamics and Entropy-3": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-Thermodynamic/3. IInd & IIIrd Law of thermodynamics and Entropy-3.html",
+			 "4. Heat of reaction-1": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-Thermodynamic/4. Heat of reaction-1.html",
+			 "4. Heat of reaction-2": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-Thermodynamic/4. Heat of reaction-2.html",
+			 "4. Heat of reaction-3": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-Thermodynamic/4. Heat of reaction-3.html",
+			 "4. Heat of reaction-4": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-Thermodynamic/4. Heat of reaction-4.html",
+			 "4. Heat of reaction-5": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-Thermodynamic/4. Heat of reaction-5.html",
+			 "4. Heat of reaction-6": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-Thermodynamic/4. Heat of reaction-6.html",
+			 "4. Heat of reaction-7": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-Thermodynamic/4. Heat of reaction-7.html",
+			 "5. Bond energy": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-Thermodynamic/5. Bond energy.html",
+			 "6. Free energy and Work function": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-Thermodynamic/6. Free energy and Work function.html"	
+            },
+	 "Chapter 6 - Solution": {
               "1. Solubility and Kinds of Solutions": "https://chemistry-g10ep.github.io/IIT-JEE-E--HTML-Solution/1. Solubility and Kinds of Solutions.html",
 			 "2. Methods of Expressing Concentration of Solution(Percentage, wbyw %, wbyv %, vbyv %, vbyw %": "https://chemistry-g10ep.github.io/IIT-JEE-E--HTML-Solution/2. Methods of Expressing Concentration of Solution(Percentage, wbyw %, wbyv %, vbyv %, vbyw %.html",
 			 "3. ppm, ppb, and strength": "https://chemistry-g10ep.github.io/IIT-JEE-E--HTML-Solution/3. ppm, ppb, and strength.html",
@@ -619,7 +636,7 @@ setInterval(async()=>{
 			 "19. Abnormal Molecular Masses": "https://chemistry-g10ep.github.io/IIT-JEE-E--HTML-Solution/19. Abnormal Molecular Masses.html",
 			 "20. Van’t Hoff’s Factor ( i )": "https://chemistry-g10ep.github.io/IIT-JEE-E--HTML-Solution/20. Van’t Hoff’s Factor ( i ).html"	
             },
-            "Chapter 4 - Chemical Kinetics": {
+            "Chapter 7 - Chemical Kinetics": {
               "1. Chemical kinetics (Rate of a reaction)-1": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-CHEMICAL-KINETICS/1. Chemical kinetics (Rate of a reaction)-1.html",
 			 "1. Chemical kinetics (Rate of a reaction)-2": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-CHEMICAL-KINETICS/1. Chemical kinetics (Rate of a reaction)-2.html",
 			 "2. Chemical kinetics (Rate law and Rate constant)-1": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-CHEMICAL-KINETICS/2. Chemical kinetics (Rate law and Rate constant)-1.html",
@@ -632,7 +649,7 @@ setInterval(async()=>{
 			 "3. Chemical kinetics (Collision theory, Energy of activation and Arrhenius equation)": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-CHEMICAL-KINETICS/3. Chemical kinetics (Collision theory, Energy of activation and Arrhenius equation).html",
 			 "4. Chemical kinetics (Photochemical reactions)": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-CHEMICAL-KINETICS/4. Chemical kinetics (Photochemical reactions).html"	
             },
-	 "Chapter 5 - Electrochemistry": {
+	 "Chapter 8 - Electrochemistry": {
               "1. Electrolytes and Electrolysis-1": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-Electrochemistry/1. Electrolytes and Electrolysis-1.html",
 			 "1. Electrolytes and Electrolysis-2": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-Electrochemistry/1. Electrolytes and Electrolysis-2.html",
 			 "2. Faraday's law of electrolysis-1": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-Electrochemistry/2. Faraday's law of electrolysis-1.html",
@@ -650,12 +667,12 @@ setInterval(async()=>{
 			 "5. Electrode potential, ECell, Nernt equation and ECS-5": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-Electrochemistry/5. Electrode potential, ECell, Nernt equation and ECS-5.html",
 			 "6. Corrosion": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-Electrochemistry/6. Corrosion.html"	
             },
-			            "Chapter 5 - Coming Soon": {
+			            "Chapter 9 - Coming Soon": {
               "Coming Soon": "https://gten-educational-platform.github.io/Class-11-Physics/motion-1d/basic/uniform-acceleration.html",
 			 "Coming Soon": "https://gten-educational-platform.github.io/Class-11-Physics/motion-1d/basic/uniform-acceleration.html",
 			 "Coming Soon": "https://gten-educational-platform.github.io/Class-11-Physics/motion-1d/basic/uniform-acceleration.html"	
             },
-			            "Chapter 6 - Coming Soon": {
+			            "Chapter 10 - Coming Soon": {
               "Coming Soon": "https://gten-educational-platform.github.io/Class-11-Physics/motion-1d/basic/uniform-acceleration.html",
 			 "Coming Soon": "https://gten-educational-platform.github.io/Class-11-Physics/motion-1d/basic/uniform-acceleration.html",
 			 "Coming Soon": "https://gten-educational-platform.github.io/Class-11-Physics/motion-1d/basic/uniform-acceleration.html"	
