--- a/Public/index.html
+++ b/Public/index.html
@@ -711,23 +711,27 @@ setInterval(async()=>{
              },
 			"Structure of Atoms": {
               "PYQ-2024": "https://chemistry-g10ep.github.io/PYQ-Struc-Of-Atoms/STRUCTURE OF ATOM PYQ Quiz 2024.html",
-			  "Coming Soon": "https://gten-educational-platform.github.io/Class-11-Physics/motion-1d/basic/uniform-acceleration.html",
+			  "Coming Soon": "https://gten-educational-platform.github.io/Class-11-Physics/motion-1d/basic/uniform-acceleration.html"
 				 },
 			"Thermodynamic": {
               "PYQ-2024": "https://chemistry-g10ep.github.io/PYQ-Thermodynamic/CHEMICAL THERMODYANAMIC pyq 2024.html",
-			  "Coming Soon": "https://gten-educational-plaform.github.io/Class-11-Physics/motion-1d/basic/uniform-acceleration.html",
+			  "Coming Soon": "https://gten-educational-plaform.github.io/Class-11-Physics/motion-1d/basic/uniform-acceleration.html"
 			 },
 			"Equlibrium": {
               "PYQ-2024": "https://chemistry-g10ep.github.io/PYQ-Equilibrium/EQULIVRIUM PYQ 2024.html",
-			  "Coming Soon": "https://gten-educational-platform.github.io/Class-11-Physics/motion-1d/basic/uniform-acceleration.html",
+			  "Coming Soon": "https://gten-educational-platform.github.io/Class-11-Physics/motion-1d/basic/uniform-acceleration.html"
 			 },
 			"Solution": {
               "PYQ-2024": "https://chemistry-g10ep.github.io/PYQ-Solution/SOLUTION PYQ 2024.html",
-			  "Coming Soon": "https://gten-educational-platform.github.io/Class-11-Physics/motion-1d/basic/uniform-acceleration.html",
+			  "Coming Soon": "https://gten-educational-platform.github.io/Class-11-Physics/motion-1d/basic/uniform-acceleration.html"
+			 },
+			"Haloalkanes and Haloarenes": {
+              "PYQ-2024 cominng soon": "https://chemistry-g10ep.github.io/PYQ-Solution/SOLUTION PYQ 2024.html",
+			  "PYQ-2025": "https://chemistry-g10ep.github.io/PYQ-Halo--Al-Ar/HALO%20ALK%20AND%20ARE-%20PYQ-2025.html"
 			 },
 			"Electrochemistry": {
               "PYQ-2024": "https://chemistry-g10ep.github.io/PYQ-Elec-Chemistry/ELECTROCHEMISTRY PYQ 2024.html",
-			  "Coming Soon": "https://gten-educational-platform.github.io/Class-11-Physics/motion-1d/basic/uniform-acceleration.html",
+			  "Coming Soon": "https://gten-educational-platform.github.io/Class-11-Physics/motion-1d/basic/uniform-acceleration.html"
 						
 			 }
           },
