--- a/Public/index.html
+++ b/Public/index.html
@@ -733,6 +733,10 @@ setInterval(async()=>{
               "PYQ-2024 cominng soon": "https://chemistry-g10ep.github.io/PYQ-Solution/SOLUTION PYQ 2024.html",
 			  "PYQ-2025": "https://chemistry-g10ep.github.io/PYQ-Alol-Ph-Etar/Alcohol phemol and ether pyq-2025.html"
 			 },
+			"Aldehydes, Ketones and Carboxylic Acids": {
+              "PYQ-2024 cominng soon": "https://chemistry-g10ep.gitub.io/PYQ-Solution/SOLUTION PYQ 2024.html",
+			  "PYQ-2025": "https://chemistry-g10ep.github.io/PYQ-Ald-Ket-Car-Acid/Aled-ket-car PYQ-2025.html"
+			 },
 			"Electrochemistry": {
               "PYQ-2024": "https://chemistry-g10ep.github.io/PYQ-Elec-Chemistry/ELECTROCHEMISTRY PYQ 2024.html",
 			  "Coming Soon": "https://gten-educational-platform.github.io/Class-11-Physics/motion-1d/basic/uniform-acceleration.html"
